[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
future-utils = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["connect", "rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
serde_json = "1.0.149"
futures-util = "0.3"


